--- a/todoCss.css
+++ b/todoCss.css
@@ -45,7 +45,7 @@
   gap: 10px;
 }
 
-.my-div{
+.mydiv{
   display: flex;
 }
 
@@ -82,7 +82,7 @@
   margin-left: 15px;
 }
 
-#my-select{
+.my-select{
   outline: none;
   border: none;
   padding: 3px;
